--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "framer-motion": "^11.2.12",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.35",
+    "next-auth": "^4.24.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
@@ -33,7 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^16.1.1",
     "nodemon": "^3.1.4",
     "react-router-dom": "^6.24.0",
     "typescript": "^5"
